consistent html for events

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -91,7 +91,8 @@ a:hover {
 
 
 .event-heading {
-	height: 50px;
+	height: 75px;
+	padding: 5px 15px;
 }
 
 .profile-heading {
@@ -124,4 +125,8 @@ a:hover {
 	display: inline-block;
 	margin: 20px;
 	margin-right: 20px;
+}
+
+.grid h4 {
+	text-align: center;
 }
