--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,5 +17,6 @@
 
 <br><br>
 <% if current_user.id == @event.user_id %>
-<%= link_to "Edit this event", edit_event_path(@event) %> <br>
+<%= link_to "Edit this event", edit_event_path(@event), class: "button btn btn-primary btn-xs" %> |
+<%= link_to 'Destroy', @event, method: :delete, data: { confirm: 'Are you sure?' }, class: "button btn btn-primary btn-xs" %>
 <% end %>
