--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -14,8 +14,27 @@
  *= require_self
  */
 .navbar-inverse .navbar-nav>li>a {
-	color: #000;
+	color: #18d0f4;
 	font-size: 16px;
+	margin: 5px 5px 0 10px;
+}
+
+.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+	margin: 15px 10px 0 10px;
+}
+
+.btn-danger {
+	background-color: #18d0f4;
+	border-color: #000;
+	border-width: 1.5px;
+	margin-top: 15px;
+	color: #000;
+	font-weight: 50%;
+}
+
+.btn-danger:hover {
+	background-color: #18d0f4;
+	border-color: #000;
 }
 
 body {
