--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/events" class="navbar-brand">City Buzz</a>
+      <a href="/events" class="navbar-brand" ></a>
     </div>
 
     <div class="pull-right">
-		<% if user_signed_in? %>
-			<%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
-		<% end %>
+      <ul class="nav navbar-nav">
+  <% if user_signed_in? %>
+      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+    <% end %>
+      </ul>
+		
 	</div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
