--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -25,6 +25,7 @@
 						<div class="panel-image">
 							<%= image_tag event.image(:thumb) %><br>
 						</div>
+						<%= event.created_at.strftime("%A, %B %d") %>
 						<h4><%= event.message %></h4>
 						<%= link_to "More info", event_path(event) %><br>
 
@@ -53,6 +54,7 @@
 						<div class="panel-image">
 							<%= image_tag like.event.image(:thumb) %><br>
 						</div>
+						<%= like.event.created_at.strftime("%A, %B %d") %>
 						<h4><%= like.event.message %></h4>
 						<%= link_to "More info", event_path(like.event) %><br>
 
