--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -16,6 +16,7 @@
 				<div class="panel-image">
 					<%= image_tag event.image(:thumb) %><br>
 				</div>
+				<%= event.created_at.strftime("%A, %B %d") %>
 				<h4><%= event.message %></h4>
 				<%= link_to "More info", event_path(event) %><br>
 
